[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/placement.gd" type="Script" id=1]
[ext_resource path="res://assets/antimatter.svg" type="Texture" id=2]
[ext_resource path="res://assets/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/building_select.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/building_select_panel.gd" type="Script" id=5]
[ext_resource path="res://assets/font_main.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/timestep_advance.gd" type="Script" id=7]
[ext_resource path="res://assets/simple_generator.svg" type="Texture" id=8]
[ext_resource path="res://scripts/building_world.gd" type="Script" id=9]

[sub_resource type="Animation" id=2]
resource_name = "Blink"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BuildingGrid/BuildingGhost:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 2.4623, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.784314 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
scale = Vector2( 0.8, 0.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Blink"
anims/Blink = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="AntimatterLabel" type="Label" parent="CanvasLayer"]
margin_left = 70.2053
margin_top = 4.2053
margin_right = 465.205
margin_bottom = 74.2053
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextStageLabel" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -375.0
margin_top = 7.0
margin_right = -67.0
margin_bottom = 57.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = SubResource( 3 )
text = "Next Stage: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 54.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.003
margin_top = 8.0
margin_right = -9.0
margin_bottom = 58.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingSelectPanel" type="PopupPanel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 78.0
margin_right = -21.0
margin_bottom = -15.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrapper" type="Control" parent="CanvasLayer/BuildingSelectPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 977.0
margin_bottom = 503.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="CanvasLayer/BuildingSelectPanel/Wrapper"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 82.0
margin_right = -8.0
margin_bottom = -12.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BuildingChoose" parent="CanvasLayer/BuildingSelectPanel/Wrapper/Container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 304.0
margin_bottom = 405.0

[node name="BuildingChoose4" parent="CanvasLayer/BuildingSelectPanel/Wrapper/Container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_right = 628.0
margin_bottom = 405.0

[node name="BuildingChoose5" parent="CanvasLayer/BuildingSelectPanel/Wrapper/Container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 648.0
margin_right = 952.0
margin_bottom = 405.0

[node name="SkipButton" type="Button" parent="CanvasLayer/BuildingSelectPanel/Wrapper"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 6 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.5
margin_top = -75.0
margin_right = 45.5
margin_bottom = -19.0
custom_fonts/font = ExtResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageAdvancePanel" type="PopupPanel" parent="CanvasLayer"]
margin_right = 8.0
margin_bottom = 8.0

[node name="BuildingGrid" type="Node2D" parent="."]
position = Vector2( 32, 32 )
script = ExtResource( 1 )

[node name="BuildingGhost" type="Sprite" parent="BuildingGrid"]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
z_index = 1
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="ParticleStorage" type="Node2D" parent="."]

[connection signal="pressed" from="CanvasLayer/BuildingSelectPanel/Wrapper/SkipButton" to="BuildingGrid" method="_on_SkipButton_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="BuildingGrid" method="_on_BackButton_pressed"]
